--- a/index.html
+++ b/index.html
@@ -24,14 +24,11 @@
         }
 
         function fibsRec(n) {
-            let fibonacciNumbers = []
-            if (n == 1) {
-                return 0;
-            } else if (n == 2) {
-                return 1;
-            } else {
-                return fibsRec(n - 1) + fibsRec(n - 2);
-            }
+
+            return (n == 1) ? 0
+                : (n == 2) ? 1
+                    : fibsRec(n - 1) + fibsRec(n - 2);
+
         }
     </script>
 </body>
